# howay

./: Cargo.toml  README.md  accounts.json  create_tags.sh  runs  vegans.sh  words.csv
.github/workflows/: build.yml
src/: captcha.rs  cli.rs  discord.rs  main.rs  user.rs
src/email/: auth.rs  create.rs  inspect.rs  list.rs  mod.rs
